# Rust-Restaurant-Api-Client

./: Cargo.toml  README.md
src/: main.rs  models.rs  restaurant_api.rs  usage_simulation.rs
