[package]
name = "restaurant_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
serde_json = "1"
rand = "0.8.4"
chrono = "0.4.18"
futures = "0.3.19"
[dependencies.serde_with]
version = "1.13.0"